# pykrr_classifier

./: CMakeLists.txt  README.MD  setup.py
app/: krr_classifier2.cpp  main.py
